            'ckddasd', 'cckddasd' and 'cckdutil' remain to be cleaned up - Fish
13 Jul 2002 Fix dasdutil.c to correctly detecte write error im created_ckd_file - Volker Bandke
11 Jul 2002 File integrity fixes for compressed dasd - Greg Smith
11 Jul 2002 New optional HTTPROOT control file statement - Fish
09 Jul 2002 Minor fix to OPTION_CPU_UTILIZATION to fix FISH_HANG issue - Fish
02 Jul 2002 S/370 extended memory fixes - Tomas Masek
02 Jul 2002 Fixes to ckdtab in dasdtab.c - Greg Smith
02 Jul 2002 Correct Erase All Unprotected 3270 order - Tomas Fott
01 Jul 2002 Complete IPL function in web interface - Jan Jaeger
30 Jun 2002 Fix minor "inet_ntoa" bug in 'connect_client' function
            reported by Mark Gaubatz [Mark.Gaubatz@verizon.net] - Fish
30 Jun 2002 Fix some minor issues relating to tape device handling contributed
            by hackules (http://www.geocities.com/hackules390/): - Fish
            h31: Fixes a problem with HET tapes on CD.
            h23: A minor fix to tapedev that corrects the setting of the chunk
                 size for HET files.
            h09: Fixes a small bug in tapedev.c where a backspace file operation
                 could muck up position info if already positioned at the start
                 of the file.
30 Jun 2002 Calculate percent CPU utilization - Fish
29 Jun 2002 Gabor Hoffer performance patch: part 3 - Fish
27 Jun 2002 Fix validation intercept when no S/370 mode installed - Jan Jaeger
27 Jun 2002 Fix scpinfo CHSC bit - Jan Jaeger
27 Jun 2002 Remove MVCL overlap logging - Jan Jaeger
27 Jun 2002 Fix operand access id - Jan Jaeger
27 Jun 2002 Fix keyaccess on PGOUT - Jan Jaeger
23 Jun 2002 Fix for `no shadow file name' messages - Greg Smith
23 Jun 2002 Gabor Hoffer's performance patch: parts 1 & 2 -- Fish
23 Jun 2002 Fixes/enhancements for cckd chkdsk - Greg Smith
20 Jun 2002 Fix arch mode id in store status function - Jan Jaeger
19 Jun 2002 Set manufacterer to HRC for STSI - Jan Jaeger