@@ -49,6 +49,7 @@ DEVENT device_handler_table[] = {
 
     /* Local Non-SNA 3270 devices */
     { "3270", 0x3270, &loc3270_device_hndinfo },
+    { "3287", 0x3287, &loc3270_device_hndinfo },
 
     /* Communications devices */
     { "3088", 0x3088, &ctcadpt_device_hndinfo },
